MORE MEDIA CONA1

--- a/index.html
+++ b/index.html
@@ -34,6 +34,36 @@
 </div>
 
 <img src="cute.png">
+<div class="text">
+<h1>  Image No.2: CUTEST!</h1>
+</div>
+<img src="CUTEST.png">
+
+<h2>FROM NOW ON YOU CANNOT SEE THE TITLES (BORED...)</h2><br><br><br>
+
+    <audio controls>
+<source src="embrace.mp3" type="audio/mp3">
+</audio>
+
+<audio controls>
+<source src="pengu.mp3" type="audio/mp3">
+</audio>
+
+
+
+<audio controls>
+<source src="tech.mp3" type="audio/mp3">
+</audio><br>
+
+
+<video controls source src="tuitle.mp4" type="video/mp4" class="too_big">
+</video>
+
+<video controls src="32.mp4" class="too_big" loop>
+
+</video><br><br><br><br><br><br><br><br>
+
+<a href="https://drive.google.com/drive/folders/15GVZn6PZJm8f6U9Xp8i9F8wRWyIeLhWL?usp=sharing"><button type="button" name="button">DOWNLOAD ALL</button></a>
 
 </body>
 </html>
